Fix for bug 393357 (nsDocument::mRadioGroups leaks its members). Patch by sharparrow1@yahoo.com, r/sr=bz, a=sicking.