content/base/src/nsDocument.cpp
@@ -315,7 +315,7 @@ struct nsRadioGroupStruct
    * A strong pointer to the currently selected radio button.
    */
   nsCOMPtr<nsIDOMHTMLInputElement> mSelectedRadioButton;
-  nsSmallVoidArray mRadioButtons;
+  nsCOMArray<nsIFormControl> mRadioButtons;
 };
 
 
@@ -945,23 +945,20 @@ SubDocTraverser(PLDHashTable *table, PLDHashEntryHdr *hdr, PRUint32 number,
   return PL_DHASH_NEXT;
 }
 
-PR_STATIC_CALLBACK(PRIntn)
-RadioGroupsTraverser(nsHashKey *aKey, void *aData, void* aClosure)
+PR_STATIC_CALLBACK(PLDHashOperator)
+RadioGroupsTraverser(const nsAString& aKey, nsAutoPtr<nsRadioGroupStruct>& aData, void* aClosure)
 {
-  nsRadioGroupStruct *entry = static_cast<nsRadioGroupStruct*>(aData);
   nsCycleCollectionTraversalCallback *cb = 
     static_cast<nsCycleCollectionTraversalCallback*>(aClosure);
 
-  cb->NoteXPCOMChild(entry->mSelectedRadioButton);
+  cb->NoteXPCOMChild(aData->mSelectedRadioButton);
 
-  nsSmallVoidArray &radioButtons = entry->mRadioButtons;
-  PRUint32 i, count = radioButtons.Count();
+  PRUint32 i, count = aData->mRadioButtons.Count();
   for (i = 0; i < count; ++i) {
-    cb->NoteXPCOMChild(static_cast<nsIFormControl*>(radioButtons[i]));
+    cb->NoteXPCOMChild(aData->mRadioButtons[i]);
   }
-  
 
-  return kHashEnumerateNext;
+  return PL_DHASH_NEXT;
 }
 
 PR_STATIC_CALLBACK(PLDHashOperator)
@@ -1086,6 +1083,7 @@ nsDocument::Init()
   }
 
   mLinkMap.Init();
+  mRadioGroups.Init();
 
   // Force initialization.
   nsBindingManager *bindingManager = new nsBindingManager();
@@ -5041,17 +5039,15 @@ nsDocument::GetRadioGroup(const nsAString& aName,
   nsAutoString tmKey(aName);
   if(!IsCaseSensitive())
      ToLowerCase(tmKey); //should case-insensitive.
-  nsStringKey key(tmKey);
-  nsRadioGroupStruct *radioGroup =
-    static_cast<nsRadioGroupStruct *>(mRadioGroups.Get(&key));
+  if (mRadioGroups.Get(tmKey, aRadioGroup))
+    return NS_OK;
 
-  if (!radioGroup) {
-    radioGroup = new nsRadioGroupStruct();
-    NS_ENSURE_TRUE(radioGroup, NS_ERROR_OUT_OF_MEMORY);
-    mRadioGroups.Put(&key, radioGroup);
-  }
+  nsAutoPtr<nsRadioGroupStruct> radioGroup(new nsRadioGroupStruct());
+  NS_ENSURE_TRUE(radioGroup, NS_ERROR_OUT_OF_MEMORY);
+  NS_ENSURE_TRUE(mRadioGroups.Put(tmKey, radioGroup), NS_ERROR_OUT_OF_MEMORY);
 
   *aRadioGroup = radioGroup;
+  radioGroup.forget();
 
   return NS_OK;
 }
@@ -5157,7 +5153,7 @@ nsDocument::GetNextRadioButton(const nsAString& aName,
     else if (++index >= numRadios) {
       index = 0;
     }
-    radio = do_QueryInterface(static_cast<nsIFormControl*>(radioGroup->mRadioButtons.ElementAt(index)));
+    radio = do_QueryInterface(radioGroup->mRadioButtons[index]);
     NS_ASSERTION(radio, "mRadioButtons holding a non-radio button");
     radio->GetDisabled(&disabled);
   } while (disabled && radio != currentRadio);
@@ -5173,8 +5169,7 @@ nsDocument::AddToRadioGroup(const nsAString& aName,
   nsRadioGroupStruct* radioGroup = nsnull;
   GetRadioGroup(aName, &radioGroup);
   if (radioGroup) {
-    radioGroup->mRadioButtons.AppendElement(aRadio);
-    NS_IF_ADDREF(aRadio);
+    radioGroup->mRadioButtons.AppendObject(aRadio);
   }
 
   return NS_OK;
@@ -5187,9 +5182,7 @@ nsDocument::RemoveFromRadioGroup(const nsAString& aName,
   nsRadioGroupStruct* radioGroup = nsnull;
   GetRadioGroup(aName, &radioGroup);
   if (radioGroup) {
-    if (radioGroup->mRadioButtons.RemoveElement(aRadio)) {
-      NS_IF_RELEASE(aRadio);
-    }
+    radioGroup->mRadioButtons.RemoveObject(aRadio);
   }
 
   return NS_OK;
@@ -5208,9 +5201,7 @@ nsDocument::WalkRadioGroup(const nsAString& aName,
 
   PRBool stop = PR_FALSE;
   for (int i = 0; i < radioGroup->mRadioButtons.Count(); i++) {
-    aVisitor->Visit(static_cast<nsIFormControl *>
-                               (radioGroup->mRadioButtons.ElementAt(i)),
-                    &stop);
+    aVisitor->Visit(radioGroup->mRadioButtons[i], &stop);
     if (stop) {
       return NS_OK;
     }
